--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
     <!-- HEADER  -->
     <header>
-
+        <div class="icone-header">
+            <i class="fa-solid fa-table-cells"></i>
+            Speaker View
+        </div>
+        <div class="icone-header">
+            <i class="fa-solid fa-arrows-up-down-left-right"></i>
+        </div>
     </header>
     
     <!-- MAIN  -->
