--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
     
     <!-- MAIN  -->
     <main>
-
+        <div class="foto-profilo">
+           <img src="https:/picsum.photos/200" alt="foto profilo"> 
+           <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+               Pinco Pallo
+           </div>
+        </div>
     </main>
 
     <!-- FOOTER  -->
