--- a/index.html
+++ b/index.html
@@ -30,6 +30,244 @@
                Pinco Pallo
            </div>
         </div>
+        <div class="foto-profilo">
+            <img src="https:/picsum.photos/200" alt="foto profilo"> 
+            <div class="nome-cognome">
+             <i class="fa-solid fa-microphone-lines-slash"></i>
+                Pinco Pallo
+            </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
+        <div class="foto-profilo">
+        <img src="https:/picsum.photos/200" alt="foto profilo"> 
+        <div class="nome-cognome">
+            <i class="fa-solid fa-microphone-lines-slash"></i>
+            Pinco Pallo
+        </div>
+        </div>
     </main>
 
     <!-- FOOTER  -->
