--- a/index.html
+++ b/index.html
@@ -272,7 +272,89 @@
 
     <!-- FOOTER  -->
     <footer>
+        <div>
+            <ul>
+                <li>
+                    <i class="fa-solid fa-microphone" ></i>
+                    <div>
+                        Mute
+                    </div> 
+                </li>
+                <li>
+                    <i class="fa-solid fa-angle-up"></i>
+                </li>
+                <li>
+                    <i class="fa-solid fa-video"></i>
+                    <div>
+                        Stop Video
+                    </div> 
+                </li>
+                <li>
+                    <i class="fa-solid fa-angle-up"></i>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <i class="fa-solid fa-user-plus"></i>
+                    <div>
+                        Invite
+                    </div> 
+                </li>
+                <li>
+                    <i class="fa-solid fa-users"></i>
+                    <div>
+                        Manage Participants
+                    </div> 
+                </li>
+                <li>
+                    <i class="fa-solid fa-chart-column"></i>
+                    <div>
+                        Polling
+                    </div> 
+                </li>
+                <li>
+                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                    <div>
+                        Share Screen
+                    </div>
+                </li>
+                <li>
+                    <i class="fa-solid fa-angle-up"></i>
+                </li> 
+                <li>
+                    <i class="fa-solid fa-comment"></i>
+                    <div>
+                        Chat
+                    </div> 
+                </li>
+                <li>
+                    <i class="fa-solid fa-record-vinyl"></i>
+                    <div>
+                        Record
+                    </div> 
+                </li>
+                <li>
+                    <i class="fa-solid fa-table-cells-large"></i>
+                    <div>
+                        Breakout Rooms
+                    </div> 
+                </li>
+                <li>
+                    <i class="fa-solid fa-ellipsis"></i>
+                    <div>
+                        More
+                    </div> 
+                </li>
+            </ul> 
+        </div>
+        <div>
 
+        </div>
+        <div id="end-meeting">
+            End meeting
+        </div>
     </footer>
     
 </body>
