--- a/index.html
+++ b/index.html
@@ -24,250 +24,216 @@
     <!-- MAIN  -->
     <main>
         <div class="foto-profilo">
-           <img src="https:/picsum.photos/200" alt="foto profilo"> 
+           <img src="https://picsum.photos/200" alt="foto profilo"> 
            <div class="nome-cognome">
             <i class="fa-solid fa-microphone-lines-slash"></i>
                Pinco Pallo
            </div>
         </div>
         <div class="foto-profilo">
-            <img src="https:/picsum.photos/200" alt="foto profilo"> 
+            <img src="https://picsum.photos/200" alt="foto profilo"> 
             <div class="nome-cognome">
              <i class="fa-solid fa-microphone-lines-slash"></i>
                 Pinco Pallo
             </div>
         </div>
         <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
+            <img src="https://picsum.photos/200" alt="foto profilo"> 
+            <div class="nome-cognome">
+             <i class="fa-solid fa-microphone-lines-slash"></i>
+                Pinco Pallo
+            </div>
         </div>
         <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
         </div>
         <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
+            <img src="https://picsum.photos/200" alt="foto profilo"> 
+            <div class="nome-cognome">
+             <i class="fa-solid fa-microphone-lines-slash"></i>
+                Pinco Pallo
+            </div>
         </div>
         <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
         </div>
         <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
         </div>
         <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
         </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
-        <div class="foto-profilo">
-        <img src="https:/picsum.photos/200" alt="foto profilo"> 
-        <div class="nome-cognome">
-            <i class="fa-solid fa-microphone-lines-slash"></i>
-            Pinco Pallo
-        </div>
-        </div>
+           <div class="foto-profilo">
+            <img src="https://picsum.photos/200" alt="foto profilo"> 
+            <div class="nome-cognome">
+             <i class="fa-solid fa-microphone-lines-slash"></i>
+                Pinco Pallo
+            </div>
+         </div>
+         <div class="foto-profilo">
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
+          </div>
+          <div class="foto-profilo">
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
+          </div>
+          <div class="foto-profilo">
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
+           </div>
+           <div class="foto-profilo">
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
+          </div>
+          <div class="foto-profilo">
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
+           </div>
+           <div class="foto-profilo">
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
+           </div>
+           <div class="foto-profilo">
+            <img src="https://picsum.photos/200" alt="foto profilo"> 
+            <div class="nome-cognome">
+             <i class="fa-solid fa-microphone-lines-slash"></i>
+                Pinco Pallo
+            </div>
+         </div>
+         <div class="foto-profilo">
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
+         </div>
+         <div class="foto-profilo">
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
+         </div>
+         <div class="foto-profilo">
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
+         </div>
+         <div class="foto-profilo">
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
+         </div>
+         <div class="foto-profilo">
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
+         </div>
+         <div class="foto-profilo">
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
+         </div>
+         <div class="foto-profilo">
+               <img src="https://picsum.photos/200" alt="foto profilo"> 
+               <div class="nome-cognome">
+                <i class="fa-solid fa-microphone-lines-slash"></i>
+                   Pinco Pallo
+               </div>
+         </div>
+            <div class="foto-profilo">
+             <img src="https://picsum.photos/200" alt="foto profilo"> 
+             <div class="nome-cognome">
+              <i class="fa-solid fa-microphone-lines-slash"></i>
+                 Pinco Pallo
+             </div>
+          </div>
+          <div class="foto-profilo">
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
+           </div>
+           <div class="foto-profilo">
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
+           </div>
+           <div class="foto-profilo">
+               <img src="https://picsum.photos/200" alt="foto profilo"> 
+               <div class="nome-cognome">
+                <i class="fa-solid fa-microphone-lines-slash"></i>
+                   Pinco Pallo
+               </div>
+            </div>
+            <div class="foto-profilo">
+              <img src="https://picsum.photos/200" alt="foto profilo"> 
+              <div class="nome-cognome">
+               <i class="fa-solid fa-microphone-lines-slash"></i>
+                  Pinco Pallo
+              </div>
+           </div>
+           <div class="foto-profilo">
+               <img src="https://picsum.photos/200" alt="foto profilo"> 
+               <div class="nome-cognome">
+                <i class="fa-solid fa-microphone-lines-slash"></i>
+                   Pinco Pallo
+               </div>
+            </div>
+            <div class="foto-profilo">
+               <img src="https://picsum.photos/200" alt="foto profilo"> 
+               <div class="nome-cognome">
+                <i class="fa-solid fa-microphone-lines-slash"></i>
+                   Pinco Pallo
+               </div>
+            </div>
+        
     </main>
 
     <!-- FOOTER  -->
